# codesteward

./: .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  AGENT_SETUP.md  CHANGELOG.md  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
configs/: mcp-local.yaml.example
src/codesteward/: __init__.py
src/codesteward/engine/: tree_sitter_parser.py
src/codesteward/engine/parsers/: _ast_utils.py  base.py  cobol.py  cpp.py  csharp.py  java.py  kotlin.py  python.py  rust.py  typescript.py
src/codesteward/mcp/: __init__.py
src/codesteward/mcp/tools/: __init__.py  graph.py
templates/: .cursorrules  .windsurfrules  AGENTS.md  CLAUDE.md  GEMINI.md  copilot-instructions.md
templates/vscode/: mcp.json
tests/: conftest.py
tests/test_engine/: test_graph_builder.py  test_tree_sitter_parser.py
tests/test_mcp/: test_graph_tools.py
