[project]
name = "codesteward-mcp"
version = "0.1.0"
description = "Codesteward MCP Graph Server — structural graph queries for 14 languages, served over HTTP+SSE or stdio"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "neo4j>=5.0",
]

[project.scripts]
codesteward-mcp = "codesteward.mcp.server:main"

[project.optional-dependencies]
# Core tree-sitter grammars (TypeScript/JS/Python/Java)
graph = [
    "tree-sitter>=0.24",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-java>=0.23",
]
graph-csharp  = ["tree-sitter>=0.21", "tree-sitter-c-sharp>=0.21"]
graph-kotlin  = ["tree-sitter>=0.21", "tree-sitter-kotlin>=0.21"]
graph-scala   = ["tree-sitter>=0.21", "tree-sitter-scala>=0.21"]
graph-go      = ["tree-sitter>=0.21", "tree-sitter-go>=0.21"]
graph-c       = ["tree-sitter>=0.21", "tree-sitter-c>=0.21"]
graph-cpp     = ["tree-sitter>=0.21", "tree-sitter-cpp>=0.21"]
graph-rust    = ["tree-sitter>=0.21", "tree-sitter-rust>=0.21"]
graph-php     = ["tree-sitter>=0.21", "tree-sitter-php>=0.21"]
# All 14 languages at once
graph-all = [
    "codesteward-mcp[graph]",
    "codesteward-mcp[graph-csharp]",
    "codesteward-mcp[graph-kotlin]",
    "codesteward-mcp[graph-scala]",
    "codesteward-mcp[graph-go]",
    "codesteward-mcp[graph-c]",
    "codesteward-mcp[graph-cpp]",
    "codesteward-mcp[graph-rust]",
    "codesteward-mcp[graph-php]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codesteward"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/codesteward --cov-report=term-missing --cov-fail-under=60"
